Basic App created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,18 +7,22 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="M_Care"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MCare"
         tools:targetApi="31">
         <activity
-            android:name=".second_activity"
+            android:name=".SignupActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".Thirdactivity"></activity>
+        <activity android:name=".second_activity"></activity>
+        <activity android:name=".Choice_activity"></activity>
+        <activity android:name=".Fourthactivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
